--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Sid Shared</string>
+
+    <string name="nearby_status_connecting">Connecting</string>
+    <string name="nearby_status_not_connected">Not connected</string>
+    <string name="nearby_status_connected">Connected</string>
 </resources>
